# flask

./: .gitignore  README.md  config.py  requirements.txt
app/: __init__.py  routes.py
myapp/: __init__.py
myapp/config/: __init__.py  default.py  development.py  production.py  testing.py
myapp/models/: __init__.py
myapp/static/: style.css
myapp/templates/: base.html
myapp/views/: __init__.py
myproject/: README.md  pyproject.toml
myproject/myproject/: __init__.py
myproject/tests/: conftest.py  test_factory.py
tests/: test_app.py  test_config.py
